src/styles/components/_header.scss
.header {
  height: var(--header-height);
  width: 100%;
  border-bottom: $border-standard;
  display: flex;
}

.header__logo {
  @include -flex-center-all;
  width: var(--theme-rect-width);
  border-left: $border-standard;

  &-link {
    @include -flex-center-all;
  }

  &-img {
    width: 65%;
    margin: 0 auto;
  }
}

/*
** navigation bar
*/
:root {
  --nav-border-size: 3px;
}
$nav-chevron-size: 2em;
$nav-btn-width: calc(#{$nav-width} * 0.2);
$chevron-line-width: calc(#{$nav-width} / 10);

.nav {
  @include -flex-center-space-between;
  flex-grow: 1;
  padding: 0 2rem;
  transition: all $transition-time;
}

.nav__btn {
  position: relative;
  font-size: 100%;
  width: $nav-btn-width;

  // arrow chevron
  &.-chevron {
    @include -flex;

    &.-right {
      justify-content: flex-end;
    }
  }
  &-chevron {
    border-style: solid;
    border-width: var(--nav-border-size) var(--nav-border-size) 0 0;
    border-color: black;
    height: calc(#{$nav-chevron-size} * 0.8);
    width: calc(#{$nav-chevron-size} * 0.8);

    .-left & {
      transform: rotate(-135deg);
    }
    .-right & {
      transform: rotate(45deg);
    }
  }

  // arrow line
  &.-chevron {
    &:before {
      content: "";
      position: absolute;
      top: calc(50% - #{var(--nav-border-size)}/ 2);
      width: calc(#{$chevron-line-width} * 0.8);
      height: var(--nav-border-size);
      background-color: $c-main;
      transition: all $transition-time;
    }

    &.-left:before {
      left: calc(#{$chevron-line-width} / 10);
    }
    &.-right:before {
      right: calc(#{$chevron-line-width} / 10);
    }
  }

  // ham
  &.-ham {
    position: relative;
    height: $nav-chevron-size;
    width: calc(#{$nav-btn-width} / 1.5);

    & .nav__btn-ham {
      height: var(--nav-border-size);
      width: 100%;
      background-color: $c-main;
    }

    &:before,
    &:after {
      content: "";
      position: absolute;
      left: 0;
      height: var(--nav-border-size);
      width: 100%;
      background-color: $c-main;
    }
    &:before {
      top: 0;
    }
    &:after {
      bottom: 0;
    }
  }
}

// rwd
.nav__btn.-chevron {
  @include media("above-desktop") {
    transition: all $transition-time;

    &:hover {
      transition: all $transition-time;
      &:before,
      &:after {
        transition: all $transition-time;
      }
    }

    &.-left:hover {
      transform: translate3d(-0.8rem, 0, 0);

      &:before {
        transform: translate3d(-0.85rem, 0, 0);
      }
    }
    &.-right:hover {
      transform: translate3d(0.8rem, 0, 0);

      &:before {
        transform: translate3d(0.85rem, 0, 0);
      }
    }
  }
}

.nav__btn.-ham {
  @include media("above-desktop") {
    transition: all $transition-time;

    &:hover {
      width: calc(#{$nav-btn-width} / 1.4);
    }
  }
}

// state management
.header.-is-about,
.nav.-is-menu-active {
  transition: all $transition-time;

  & .nav__btn-ham {
    background-color: transparent;
  }
  & .nav__btn.-ham {
    &:after,
    &:before {
      transform-origin: center;
    }
    &:after {
      bottom: calc(#{$nav-chevron-size} / 2.5);
      transform: rotate(15deg);
    }
    &:before {
      top: calc(#{$nav-chevron-size} / 2);
      transform: rotate(-15deg);
    }
  }
  & .nav__btn.-chevron {
    opacity: 0;
    pointer-events: none;
  }
}

